--- a/README
+++ b/README
@@ -3,7 +3,7 @@
         после выбора всех фильтров - возможность спарсить,
         после старт/меню - настройка фильтров 
 
-// Sedan, pickup, hatchback - спросить у Влада про типы 
+// Sedan, pickup, hatchback - спросить про типы 
 // тех что нету  "seg-compact", "seg-city-car", "plugin-hybrid"
 
 Проверить общие страны, чтобы можно было искать.
